@@ -1,5 +1,5 @@
 ---------------------------------------------------------------------------
-OpenAES-0.8.0
+OpenAES-0.8.1
 Nabil S. Al Ramli
 www.nalramli.com
 ---------------------------------------------------------------------------
