@@ -51,7 +51,7 @@ extern "C" {
 #	define OAES_API
 #endif // WIN32
 
-#define OAES_VERSION "0.8.0"
+#define OAES_VERSION "0.8.1"
 #define OAES_BLOCK_SIZE 16
 
 typedef void OAES_CTX;
