@@ -318,15 +318,15 @@
         {
         "Name" = "8:Microsoft Visual Studio"
         "ProductName" = "8:OpenAES"
-        "ProductCode" = "8:{773DD3F4-B80B-4C32-B725-64F90BF9E299}"
-        "PackageCode" = "8:{04924824-FEEE-464F-AA1D-6D4F54833B57}"
+        "ProductCode" = "8:{473673B0-61F5-4194-9188-873AE3B12074}"
+        "PackageCode" = "8:{75AABF70-0E0F-458F-BF96-7F3C0DA46C2F}"
         "UpgradeCode" = "8:{3D9FF9A0-000F-4A0F-9AAC-763816C88729}"
         "AspNetVersion" = "8:4.0.30319.0"
         "RestartWWWService" = "11:FALSE"
         "RemovePreviousVersions" = "11:FALSE"
         "DetectNewerInstalledVersion" = "11:TRUE"
         "InstallAllUsers" = "11:FALSE"
-        "ProductVersion" = "8:0.8.0"
+        "ProductVersion" = "8:0.8.1"
         "Manufacturer" = "8:nalramli.com"
         "ARPHELPTELEPHONE" = "8:"
         "ARPHELPLINK" = "8:"
